add new entries

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -16,6 +16,18 @@ RUN pip install -r requirements.txt
 # копирование всех файлов из текущего каталога(где лежит Dockerfile) в рабочий каталог указанный в WORKDIR
 COPY . ./
 
-# команда для запуска процесса когда создастся контейнер
+# команда которая будет всегда выполняться при запуске контейнера
+# (менее подвержена переопределению, и любые аргументы, переданные при запуске контейнера, будут добавлены к команде ENTRYPOINT как параметры)
+# docker run <image> --option (В этом случае будет выполнена команда python main.py --option.)
+ENTRYPOINT ["python", "main.py"]
+
+# команда по умолчанию для выполнения когда создастся контейнер
+# (может быть переопределена при запуске контейнера с помощью дополнительных аргументов командной строки)
+# docker run <image> python other_script.py (В этом случае python other_script.py заменит CMD и будет выполнен other_script.py вместо main.py)
 CMD ["python", "main.py"]
 
+# CMD и ENTRYPOINT часто используются вместе.
+# Например, ENTRYPOINT указывает основную команду, а CMD предоставляет аргументы по умолчанию, которые могут быть переопределены.
+# ENTRYPOINT ["python"]
+# CMD ["main.py"]
+# Теперь, если вы запустите контейнер без аргументов, он выполнит python main.py. Но если вы запустите его с аргументом, например, docker run <image> other_script.py, будет выполнена команда python other_script.py.
